[package]
name = "balamod"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "8.6.0"
reqwest = { version = "0.13.4", features = ["stream"] }
tar = "0.4.46"
flate2 = "1.1.9"
textfmt = "1.1.0"
smol = "2.0.2"
async-compat = "0.2.5"
easy-parallel = "3.3.1"
enable-ansi-support = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56.0"
